# AimTrainer

./: CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  GameEngine.cpp  GameEngine.h  InputManager.cpp  InputManager.h  README.md  StaticTarget.cpp  StaticTarget.h  StatsManager.cpp  StatsManager.h  Target.h  UIManager.cpp  UIManager.h  main.cpp  movingtarget.cpp  movingtarget.h
